--- a/docs/.vuepress/styles/all.scss
+++ b/docs/.vuepress/styles/all.scss
@@ -7,6 +7,7 @@
 // Layout & components
 @import '../../../node_modules/bootstrap/scss/buttons';
 @import '../../../node_modules/bootstrap/scss/forms';
+@import '../../../node_modules/bootstrap/scss/grid';
 
 // Custom
 @import 'helpers/base';
