--- a/docs/.vuepress/styles/all.scss
+++ b/docs/.vuepress/styles/all.scss
@@ -9,6 +9,7 @@
 @import '../../../node_modules/bootstrap/scss/forms';
 @import '../../../node_modules/bootstrap/scss/grid';
 @import '../../../node_modules/bootstrap/scss/card';
+@import '../../../node_modules/bootstrap/scss/nav';
 
 // Custom
 @import 'helpers/base';
