--- a/docs/.vuepress/styles/all.scss
+++ b/docs/.vuepress/styles/all.scss
@@ -10,6 +10,7 @@
 @import '../../../node_modules/bootstrap/scss/grid';
 @import '../../../node_modules/bootstrap/scss/card';
 @import '../../../node_modules/bootstrap/scss/nav';
+@import '../../../node_modules/bootstrap/scss/list-group';
 
 // Custom
 @import 'helpers/base';
