--- a/docs/.vuepress/styles/all.scss
+++ b/docs/.vuepress/styles/all.scss
@@ -11,6 +11,7 @@
 @import '../../../node_modules/bootstrap/scss/card';
 @import '../../../node_modules/bootstrap/scss/nav';
 @import '../../../node_modules/bootstrap/scss/list-group';
+@import '../../../node_modules/bootstrap/scss/custom-forms';
 
 // Custom
 @import 'helpers/base';
