--- a/docs/.vuepress/styles/all.scss
+++ b/docs/.vuepress/styles/all.scss
@@ -12,6 +12,7 @@
 @import '../../../node_modules/bootstrap/scss/nav';
 @import '../../../node_modules/bootstrap/scss/list-group';
 @import '../../../node_modules/bootstrap/scss/custom-forms';
+@import '../../../node_modules/bootstrap/scss/spinners';
 
 // Custom
 @import 'helpers/base';
